# Orangepi-ROS-yolov8

./: README.md
ros_work/: WHEELTEC_ROS2_SYSTEM_ARCHITECTURE.md
ros_work/install/: local_setup.sh  setup.sh
ros_work/install/ackermann_msgs/share/ackermann_msgs/: package.sh
ros_work/install/astra_camera/share/astra_camera/: local_setup.sh  package.sh
ros_work/install/astra_camera_msgs/share/astra_camera_msgs/: package.sh
ros_work/install/ldlidar/lib/ldlidar/: ldlidar
ros_work/install/ldlidar/share/ldlidar/: package.sh
ros_work/install/ldlidar_sl_ros2/lib/ldlidar_sl_ros2/: ldlidar_sl_ros2_node
ros_work/install/ldlidar_sl_ros2/share/ldlidar_sl_ros2/: package.sh
ros_work/install/ldlidar_stl_ros2/lib/ldlidar_stl_ros2/: ldlidar_stl_ros2_node
ros_work/install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/: local_setup.sh  package.sh
ros_work/install/lslidar_driver/share/lslidar_driver/: package.sh
ros_work/install/lslidar_msgs/share/lslidar_msgs/: package.sh
ros_work/install/qt_robot_control/share/qt_robot_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_work/install/qt_robot_control/share/qt_robot_control/cmake/: qt_robot_controlConfig.cmake
ros_work/install/qt_robot_control/share/qt_robot_control/launch/: qt_robot_control.launch.py
ros_work/install/rplidar_ros/lib/rplidar_ros/: rplidar_node
ros_work/install/rplidar_ros/share/rplidar_ros/: package.sh
ros_work/install/serial/share/serial/: package.sh
ros_work/install/tf2_tools/share/tf2_tools/: package.sh
ros_work/install/turn_on_wheeltec_robot/lib/turn_on_wheeltec_robot/: wheeltec_robot_node
ros_work/install/turn_on_wheeltec_robot/share/turn_on_wheeltec_robot/: local_setup.sh  package.sh
ros_work/install/usb_cam/lib/usb_cam/: usb_cam_node_exe
ros_work/src/: ROS2-V5.0(humble)常用指令.txt
ros_work/src/astra_camera/: COMPLETE_ASTRA_SOLUTION.md
ros_work/src/astra_camera/launch/: astra.launch.xml  astra_full.launch.xml  astra_uvc_rgb.launch.xml  astra_with_usbcam.launch.xml
ros_work/src/qt_robot_control/: CMakeLists.txt  PROJECT_SUMMARY.md  README.md  build_and_run.sh
ros_work/src/qt_robot_control/include/qt_robot_control/: MainWindow.h  ROSNode.h  RVizWidget.h  RosImageSubscriber.h  SystemMonitorWidget.h
ros_work/src/qt_robot_control/src/: MainWindow.cpp  ROSNode.cpp  RVizWidget.cpp  RosImageSubscriber.cpp  SystemMonitorWidget.cpp  main.cpp
ros_work/src/turn_on_wheeltec_robot/launch/: turn_on_wheeltec_robot.launch.py
ros_work/src/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
ros_work/src/wheeltec_gpio_control/: README.md  fix_gpio_permissions.sh  package.xml  setup.cfg  setup.py  test_node.sh  快速启动指南.txt
ros_work/src/wheeltec_gpio_control/launch/: gpio_control.launch.py
ros_work/src/wheeltec_gpio_control/wheeltec_gpio_control/: gpio_control_node.py
yolov8_work/: data.yaml  det_utils.py  run_yolov8.sh  yolov8_cam.py  yolov8_detect.py  yolov8_gui.py  使用说明.md
yolov8_work/Mind_SDK/mxVision/: version.info
yolov8_work/Mind_SDK/mxVision-7.1.RC1/: filelist.txt  set_env.sh
yolov8_work/Mind_SDK/mxVision-7.1.RC1/config/: logging.conf
yolov8_work/Mind_SDK/mxVision-7.1.RC1/opensource/: 3rdparty.txt
yolov8_work/Mind_SDK/mxVision-7.1.RC1/python/: MxpiOSDType_pb2.py  stream.py
yolov8_work/Mind_SDK/mxVision/config/: sdk.conf  streamserver.conf
yolov8_work/Mind_SDK/mxVision/python/: MxpiDataType_pb2.py  StreamManagerApi.py
(+617 files in other folders)
