<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema下降到_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qt_robot_control</name>
  <version>1.0.0</version>
  <description>Qt5 based ROS2 robot control panel with RViz integration</description>
  <maintainer email="wheeltec@todo.todo">wheeltec</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
   
  

  <!-- Qt5 dependencies -->
  <depend>qtbase5-dev</depend>
  <depend>qttools5-dev</depend>
  
  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- RViz dependencies -->
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_visualization_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

